--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "description": "Gatsby starter for Plone",
   "version": "0.0.0",
   "dependencies": {
-    "gatsby": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby": "^2.0.0-beta.59",
+    "gatsby-image": "^2.0.0-beta.7",
+    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
+    "gatsby-plugin-sass": "^2.0.0-beta.6",
+    "gatsby-plugin-sharp": "^2.0.0-beta.7",
+    "gatsby-source-filesystem": "^2.0.1-beta.10",
+    "gatsby-transformer-sharp": "^2.1.1-beta.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-serialize": "^0.2.0"
   },
   "keywords": [
     "gatsby",
