--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "gatsby": "^2.0.0-beta.59",
     "gatsby-image": "^2.0.0-beta.7",
+    "gatsby-plugin-manifest": "^2.0.2-beta.4",
+    "gatsby-plugin-offline": "^2.0.0-beta.9",
     "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
     "gatsby-plugin-sass": "^2.0.0-beta.6",
     "gatsby-plugin-sharp": "^2.0.0-beta.7",
