--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "description": "Gatsby starter for Plone",
   "version": "0.0.0",
   "dependencies": {
-    "gatsby": "^2.0.0-beta.59",
-    "gatsby-image": "^2.0.0-beta.7",
-    "gatsby-plugin-manifest": "^2.0.2-beta.4",
-    "gatsby-plugin-offline": "^2.0.0-beta.9",
-    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
-    "gatsby-plugin-sharp": "^2.0.0-beta.7",
-    "gatsby-source-filesystem": "^2.0.1-beta.10",
-    "gatsby-source-plone": "git+https://github.com/collective/gatsby-source-plone.git",
-    "gatsby-transformer-sharp": "^2.1.1-beta.6",
+    "gatsby": "^2.0.31",
+    "gatsby-image": "^2.0.17",
+    "gatsby-plugin-manifest": "^2.0.6",
+    "gatsby-plugin-offline": "^2.0.9",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.8",
+    "gatsby-source-filesystem": "^2.0.5",
+    "gatsby-source-plone": "^0.1.0",
+    "gatsby-transformer-sharp": "^2.1.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
