--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "description": "Gatsby starter for Plone",
   "version": "0.1.0",
   "dependencies": {
-    "gatsby": "^2.0.31",
-    "gatsby-image": "^2.0.17",
-    "gatsby-plugin-manifest": "^2.0.6",
-    "gatsby-plugin-offline": "^2.0.9",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.8",
-    "gatsby-source-filesystem": "^2.0.5",
-    "gatsby-source-plone": "^0.1.0",
-    "gatsby-transformer-sharp": "^2.1.5",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0",
+    "gatsby": "^2.16.4",
+    "gatsby-image": "^2.2.29",
+    "gatsby-plugin-manifest": "^2.2.23",
+    "gatsby-plugin-offline": "^3.0.16",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sharp": "^2.2.32",
+    "gatsby-source-filesystem": "^2.1.33",
+    "gatsby-source-plone": "git+https://github.com/collective/gatsby-source-plone.git#8f43d039845ad5ea8331106378395be3cc6263c5",
+    "gatsby-transformer-sharp": "^2.2.23",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1",
     "react-serialize": "^0.2.0"
   },
   "keywords": [
@@ -30,7 +30,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "prettier": "^1.18.2"
   },
   "repository": {
     "type": "git",
