--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "description": "Gatsby starter for Plone",
   "version": "0.1.0",
   "dependencies": {
-    "gatsby": "^2.16.4",
-    "gatsby-image": "^2.2.29",
-    "gatsby-plugin-manifest": "^2.2.23",
-    "gatsby-plugin-offline": "^3.0.16",
-    "gatsby-plugin-react-helmet": "^3.1.13",
-    "gatsby-plugin-sharp": "^2.2.32",
-    "gatsby-source-filesystem": "^2.1.33",
+    "core-js": "2",
+    "gatsby": "^2.27.0",
+    "gatsby-image": "^2.6.0",
+    "gatsby-plugin-manifest": "^2.7.0",
+    "gatsby-plugin-offline": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-sharp": "^2.9.0",
+    "gatsby-source-filesystem": "^2.6.0",
     "gatsby-source-plone": "^0.2.0",
-    "gatsby-transformer-sharp": "^2.2.23",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1",
+    "gatsby-transformer-sharp": "^2.7.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-serialize": "^0.2.0"
   },
   "keywords": [
@@ -30,7 +31,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^2.2.0"
   },
   "repository": {
     "type": "git",
